// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createLocationReducer() - maintains address bar pathname state and current + previous matched location-aware actions 1`] = `
Object {
  "basename": undefined,
  "entries": Array [
    Object {
      "hash": "",
      "key": "345678",
      "pathname": "/first",
      "search": "",
      "state": Object {},
      "url": "/first",
    },
  ],
  "hasSSR": undefined,
  "index": 0,
  "kind": "load",
  "length": 1,
  "pathname": "/second/bar",
  "payload": Object {
    "param": "bar",
  },
  "prev": Object {
    "pathname": "/first",
    "payload": Object {},
    "type": "FIRST",
  },
  "type": "SECOND",
  "url": "/second/bar",
}
`;

exports[`getInitialState() returns state.history === undefined when using createBrowserHistory 1`] = `
Object {
  "entries": undefined,
  "hasSSR": undefined,
  "index": 0,
  "kind": "init",
  "length": 1,
  "pathname": "/first",
  "payload": Object {},
  "prev": Object {
    "index": -1,
    "kind": "",
    "length": 0,
    "pathname": "",
    "payload": Object {},
    "type": "",
  },
  "type": "FIRST",
  "url": "/first",
}
`;
